fixed spacing under pie chart

--- a/frontend/src/assets/styles/css/about.css
+++ b/frontend/src/assets/styles/css/about.css
@@ -120,7 +120,7 @@
   flex-direction: row;
   justify-content: space-around;
   width: 76vw;
-  margin-bottom: 4vw;
+  margin-bottom: 9vw;
   margin-top: 2vw;
 }
 
